--- a/src/app/landing-page/landing-page.component.css
+++ b/src/app/landing-page/landing-page.component.css
@@ -128,8 +128,7 @@ main {
 }
 
 section {
-  padding: var(--spacing-8);
-  background-color: var(--card-background);
+  padding: var(--spacing-2);
   margin: 0;
 }
 
